# torchlings

./: .gitignore  Cargo.toml  README.md  pyproject.toml
exercise/01_fundamentals/: altrow.py  dot.py  dropsparse.py  flatten.py  matmul.py  maxmeanrow.py  rowmean.py  swap.py
exercise/02_math/: linear.py  minmax.py  softmax.py  var.py
exercises/01_basic/: ones.py
exercises/01_fundamentals/: add.py  matvecmul.py
exercises/01_tensors/: 2.py  4.py
exercises/02_autograd/: 5.py
exercises/02_math/: cov.py  determinant.py  eigen.py  l2.py  pearson.py
exercises/03_nn/: 1.py  4.py  6.py
exercises/04_loss/: 1.py  3.py
exercises/05_data/: 3.py
exercises/07_gpu/: 2.py  3.py
exercises/08_cv/: 1.py
exercises/09_compile/: 2.py  3.py
exercises/10_advanced/: 1.py  3.py  4.py
src/: main.py  main.rs  pretty.rs  venv.rs
torchlings/: cli.py  modal_runner.py  output.py  pretty.py  runner.py  utils.py  venv.py
torchlings/exercises/: exercise.py
torchlings/exercises/01_tensors/: 1.py  3.py  5.py  6.py
torchlings/exercises/02_autograd/: 1.py  2.py  3.py  4.py  5.py
torchlings/exercises/03_nn/: 2.py  3.py  5.py
torchlings/exercises/04_loss/: 2.py
torchlings/exercises/05_data/: 1.py  2.py
torchlings/exercises/06_train/: 1.py  2.py  3.py  4.py
torchlings/exercises/07_gpu/: 1.py
torchlings/exercises/08_cv/: 2.py  3.py
torchlings/exercises/09_compile/: 1.py
torchlings/exercises/10_advanced/: 2.py  4.py
