[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torchlings"
version = "0.2.7"
description = "Exercises to help you get used to reading and writing PyTorch code"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Harmya Bhatt", email = "harmyacs@gmail.com"}]
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "torch>=2.7.1",
    "watchfiles>=0.18.0",
]

[project.scripts]
torchlings = "torchlings.cli:main"

[tool.setuptools.packages.find]
include = ["torchlings*"]

[tool.setuptools.package-data]
"torchlings.exercises" = ["**/*.py"]

[tool.pytest.ini_options]
python_files = ["*.py"]

[tool.ruff.lint]
ignore = ["F841"]

[tool.ruff.lint.per-file-ignores]
"torchlings/exercises/**" = ["F401", "F811", "F841", "E741", "E731"]

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "setuptools>=80.9.0",
    "wheel>=0.45.1",
]
